Mejora en los filtros y organización | Pedidos 'agregá', 'minuto' y 'buscar' agregados

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Asistente virtual | Python</title>
 </head>
 <body>
     <h1>Asistente virtual</h1>
-    <button onclick="get_asistente()">Iniciar</button>
+    <button id="iniciar" class="botonHabilitado">Iniciar</button>
+    <button id="detener" class="botonHabilitado">Detener</button>
     <script src="./script.js"></script>
 </body>
 </html>
